--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -26,7 +26,7 @@ ul {
 /* UTILS */
 
 .container {
-    max-width: 1200px;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 1rem;
@@ -77,4 +77,33 @@ ul {
 
 .col-30 {
     width: 30%;
+}
+
+/* # HEADER */
+
+#page-header {
+    padding: 15px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#page-header nav ul {
+    color: #52545C;
+    display: flex;
+    gap: 1rem;
+    font-size: 0.6rem;
+    font-weight: bold;
+}
+
+.logo-header img{
+    width: 60%;
+}
+
+#page-content {
+    padding: 35px 0;
+    background-color: #1C1C1C;
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
 }
