--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -82,7 +82,6 @@ ul {
 /* # HEADER */
 
 #page-header {
-    padding: 15px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -96,9 +95,20 @@ ul {
     font-weight: bold;
 }
 
+#page-header nav ul li {
+    padding: 40px 0;
+}
+
 .logo-header img{
     width: 60%;
 }
+
+#page-header .active {
+    color: #0479E6;
+    border-bottom: 5px solid #0479E6;
+}
+
+/* # MAIN */
 
 #page-content {
     padding: 35px 0;
