--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -123,6 +123,8 @@ ul {
 }
 
 #merchandise {
+    position: relative;
+    z-index: 2;
     background-color: #0479E6;
     color: white;
     font-size: 0.6rem;
@@ -140,10 +142,12 @@ ul {
 
 #page-info {
     background-image: url(../../../footer-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #page-info .container {
-    padding: 30px 0;
+    height: 250px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -164,23 +168,30 @@ ul {
     gap: 3px;
 }
 
-#page-info .links {
+#page-info .col-1-2 {
     display: flex;
+}
+
+#page-info .links {
+    padding: 20px 0;
     width: 40%;
 }
 
-.logo-footer {
-    padding: 100px;
-    background-image: url("../../../dc-logo-bg.png");
-    background-repeat: no-repeat;
-    background-size: 200px;
+.logo-footer img {
+    position: relative;
+    z-index: 1;
+    margin: -20px 0;
+    height: 400px;
 }
 
 #page-footer {
+    position: relative;
+    z-index: 2;
     background-color: #303030;
 }
 
 #page-footer .container {
+    height: 100px;
     display: flex;
     justify-content: space-between;
 }
